[package]
name = "git-whoknows"
version = "0.1.0"
authors = ["Jayson Messenger <jayson.messenger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
git2 = "0.13"
shellexpand = "2.0.0"
anyhow = "1.0.28"
regex = "1.3.6"
rayon = "1.3.0"
